[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qbert"
version = "0.0.0"
description = "a dead simple task queue backed by postgres"
authors = ["backwardspy <backwardspy@gmail.com>"]
readme = "README.md"
repository = "https://github.com/backwardspy/qbert"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.10"
piccolo = {extras = ["orjson", "postgres"], version = ">=0.74.4"}
pydantic = "^1.9.1"
ulid-py = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.14.1"
mypy = "^0.961"
ptpython = "^3.0.20"
isort = "^5.10.1"
ward = "^0.66.0b0"
loguru = "^0.6.0"

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
